test/features/errors/semantic/e1074_conflicting_representation.spl
# E1074: Conflicting Representation

Feature: E1074 - Conflicting Representation Attributes
  As a Simple compiler
  I want to detect conflicting repr attributes
  So that only one representation is specified

  Background:
    Given I have the Simple compiler

  Scenario: Multiple repr attributes
    When I compile:
      '''
      #[repr(C)]
      #[repr(packed)]  # Error: conflicting with repr(C)
      struct Data:
        x: i32
      '''
    Then I should see error E1074 at line 2
    And the error message should be "conflicting representation attributes"
    And the label should indicate "conflicting repr"
    And the help should suggest "use only one representation attribute"

  Scenario: Valid single repr
    When I compile:
      '''
      #[repr(C)]
      struct Data:
        x: i32
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      #[repr(C)]
      #[repr(packed)]
      struct Data:
        x: i32
      '''
    Then I should see error E1074
    And the error message should contain "충돌하는 표현"
